osrdconf: correct vue on mobile devices

--- a/src/applications/osrd/views/OSRDConfig/OSRDConfig.scss
+++ b/src/applications/osrd/views/OSRDConfig/OSRDConfig.scss
@@ -89,7 +89,7 @@
 }
 
 .osrd-config-item-map {
-  height: calc(90% - 3rem);
+  height: calc(90vh - 3rem);
 }
 
 .osrd-config-place {
